# KATS

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.cache/: tiny_db.json
data/faiss/: datasets.idx  task_descriptions.idx  task_keywords.idx
data/graph/: graph.graphml
examples/: demo.ipynb
src/: __init__.py
src/pages/: baseline.py  benchmark.py  importation.py  manage.py  search.py  similar_datasets.py
src/task_oriented_dataset_search/: cli.py  pipeline.py
src/task_oriented_dataset_search/embedding/: embedder.py  indexer.py  interface.py  pipeline.py
src/task_oriented_dataset_search/extraction/: cache.py  client.py  extractor.py  file_extractor.py  interface.py
src/task_oriented_dataset_search/extraction/prompts/: dataset_existence_prompt.txt  dataset_extraction_prompt.txt  keywords_extraction_prompt.txt  reference_extraction_prompt.txt
src/task_oriented_dataset_search/graph/: builder.py  dataset_merger.py  merger.py  task_merger.py
src/task_oriented_dataset_search/graph/prompts/: dataset_identity_prompt.txt
src/task_oriented_dataset_search/importer/: db_importer.py  interface.py
src/task_oriented_dataset_search/preprocessing/: interface.py  loader.py  processor.py
src/task_oriented_dataset_search/search/: qa.py  searcher.py
src/task_oriented_dataset_search/search/prompts/: qa_prompt.txt  task_decomposition_prompt.txt
src/task_oriented_dataset_search/statistics/: dataset_stats.py
src/task_oriented_dataset_search/utils/: cache.py
src/utils/: bert.py  cache_utils.py  faiss.py  graph.py  paper_processor.py
test/: baseline.csv  baseline.ipynb
tests/benchmark/: README.md  benchmark-204.csv  benchmark-47.csv
