[tool.poetry]
name = "task_oriented_dataset_search"
version = "0.1.0"
description = "Task Oriented Dataset Search"
authors = ["Zixin Wei <122090569@link.cuhk.edu.cn>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "task_oriented_dataset_search", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
torch = "^2.5.0"
transformers = "^4.30.2"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
numpy = "^1.24.3"
scipy = "^1.10.1"
pandas = "^2.0.2"
huggingface-hub = "^0.15.1"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.25.0"
black = "^24.10.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
isort = "^5.11.4"
mypy = "^0.991"

[tool.poetry.scripts]
task_oriented_dataset_search = "task_oriented_dataset_search.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
